Réglage bug: 1 - les étoile grise de mauvaise taille sur la version mobile (OK) 2 - La taille des fléches du carrousel pour la version tablete et desktop (OK)

--- a/src/styles/components/_carrousel.scss
+++ b/src/styles/components/_carrousel.scss
@@ -29,6 +29,11 @@
         top: 50%;
         transform: translate(0%, -50%);
         width: 11.67px;
+
+        @include tablet {
+            width: 46px;
+            left: 23px;
+        }
     }
 
     &--arrow-right {
@@ -37,12 +42,21 @@
         top: 50%;
         transform: translate(0%, -50%);
         width: 11.67px;
+
+        @include tablet {
+            width: 46px;
+            right: 23px;
+        }
     }
 
     &--backgroun-arrow {
         position: absolute;
         height: 100%;
         width: 23.35px;
+
+        @include tablet {
+            width: 100px;
+        }
         
         &__left {
             left: 0px;
